services/downloads-standard/autobrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: downloads-standard
spec:
  type: ClusterIP
  selector:
    app: autobrr
  ports:
  - port: 7474
    targetPort: 7474
    protocol: TCP
    name: http
