services/downloads-standard/autobrr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autobrr
  namespace: downloads-standard
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - autobrr.labmatt.com
      secretName: autobrr-tls
  rules:
  - host: autobrr.labmatt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: autobrr
            port:
              number: 7474
